Bug 1770594 - Do not include username in server uri when getting nntp password. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D158619

--HG--
extra : rebase_source : 1eb0729ca8c718c5eb265193112ccc21e4b2a34e